--- a/src/angular/modules/login/login.template.html
+++ b/src/angular/modules/login/login.template.html
@@ -2,3 +2,5 @@
 <input type="text" ng-model="ctrl.model.username">
 <input type="password" ng-model="ctrl.model.password">
 <button ng-click="ctrl.login(ctrl.model)">Click to login</button>
+<br>
+<slider slides="ctrl.slides" active="2"></slider>
